--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^19.1.9",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -21,12 +22,15 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:storybook/recommended"
     ]
   },
   "browserslist": {
@@ -40,5 +44,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@storybook/addon-docs": "^9.1.6",
+    "@storybook/preset-create-react-app": "^9.1.6",
+    "@storybook/react-webpack5": "^9.1.6",
+    "autoprefixer": "^10.4.21",
+    "chromatic": "^13.1.5",
+    "eslint-plugin-storybook": "^9.1.6",
+    "postcss": "^8.5.6",
+    "prop-types": "^15.8.1",
+    "storybook": "^9.1.6",
+    "tailwindcss": "^3.4.17",
+    "webpack": "^5.101.3"
   }
 }
